--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -36,18 +36,19 @@
 
                 <ImageView
                     android:id="@+id/sessionIcon"
+                    android:visibility="visible"
                     android:layout_width="wrap_content"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:layout_gravity="center"
                     android:scaleType="fitXY"
                     android:adjustViewBounds="true"
-                    android:src="@{viewModel.currentDisplayableSession.programTypeIcon}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/sessionProgramName"
                     tools:src="@drawable/roing_img"/>
+                <!--android:src="@{viewModel.currentDisplayableSession.programTypeIcon}"-->
 
                 <!--Sission photo is never set-->
                 <ImageView
