--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,9 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
+            android:elevation="4dp"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.ExerciseTracker.PopupOverlay"
+            app:popupTheme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
             app:title="Velkommen"/>
 
     </com.google.android.material.appbar.AppBarLayout>
