--- a/app/src/main/res/layout/exercise_item.xml
+++ b/app/src/main/res/layout/exercise_item.xml
@@ -12,8 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/margin_between_elements">
+        android:layout_height="wrap_content">
 
         <View
             android:id="@+id/divider_top"
@@ -21,20 +20,34 @@
             android:layout_height="1dp"
             android:background="?attr/dividerHorizontal"
             android:layout_marginTop="@dimen/margin_between_elements"
+            android:layout_marginBottom="@dimen/margin_between_elements"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-        <ImageView
-            android:id="@+id/exercise_icon"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/exercise_icon_card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_between_elements"
-            app:layout_constraintTop_toBottomOf="@id/exercise_name"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="4dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:src="@drawable/manual_img"/>
+            app:layout_constraintBottom_toTopOf="@id/button_layout">
+
+            <ImageView
+                android:id="@+id/exercise_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_between_elements"
+                tools:src="@drawable/runner_img"/>
+
+        </androidx.cardview.widget.CardView>
+
 
         <TextView
+            style="@style/headerText"
             android:id="@+id/exercise_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,7 +67,7 @@
             android:layout_marginStart="@dimen/side_margin"
             android:text="@{exercise.description}"
             android:minLines="3"
-            app:layout_constraintStart_toEndOf="@id/exercise_icon"
+            app:layout_constraintStart_toEndOf="@id/exercise_icon_card"
             app:layout_constraintTop_toBottomOf="@id/exercise_name"
             app:layout_constraintEnd_toEndOf="parent"
             tools:text="Exercise-beskrivelse bla bla bla bla bla. Dette er en beskrivelse av et treningsprogram."/>
@@ -68,29 +81,36 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <ImageButton
+            <Button
+                style="@style/Widget.MaterialComponents.Button"
                 android:id="@+id/button_add"
                 android:layout_width="@dimen/button_size_small"
                 android:layout_height="wrap_content"
-                android:src="@drawable/add_img"
+                android:layout_marginEnd="@dimen/margin_between_elements"
+                android:layout_marginStart="@dimen/margin_between_elements"
+                app:icon="@drawable/add_img"
                 app:layout_constraintEnd_toStartOf="@id/button_remove"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
-            <ImageButton
+            <Button
+                style="@style/Widget.MaterialComponents.Button"
                 android:id="@+id/button_remove"
                 android:layout_width="@dimen/button_size_small"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
-                android:src="@drawable/delete_bin_img"
+                android:visibility="visible"
+                android:layout_marginEnd="@dimen/margin_between_elements"
+                app:icon="@drawable/delete_bin_img"
                 app:layout_constraintEnd_toStartOf="@id/button_remove"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
 
-            <ImageButton
+            <Button
+                style="@style/Widget.MaterialComponents.Button"
                 android:id="@+id/button_edit"
                 android:layout_width="@dimen/button_size_small"
                 android:layout_height="wrap_content"
-                android:src="@drawable/edit_img"
+                android:layout_marginEnd="@dimen/margin_between_elements"
+                app:icon="@drawable/edit_img"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
