--- a/app/src/main/res/layout/fragment_program_details.xml
+++ b/app/src/main/res/layout/fragment_program_details.xml
@@ -14,156 +14,181 @@
             type="com.example.exercisetracker.db.AppProgramType" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <android.widget.ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/side_margin"
-        android:layout_marginEnd="@dimen/side_margin"
-        android:layout_marginTop="@dimen/side_margin">
-
-
-        <ImageView
-            android:id="@+id/program_type_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@{programType.icon}"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            tools:src="@drawable/runner_img"/>
-
-        <TextView
-            android:id="@+id/tv_add_programs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@{programType.description}"
-            android:layout_marginTop="@dimen/side_margin"
-            android:textSize="@dimen/header_text"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/program_type_image"
-            tools:text="Program-navn"/>
-
-        <TextView
-            android:id="@+id/program_description"
+        android:layout_height="match_parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@{program.description}"
-            android:layout_marginTop="@dimen/margin_between_elements"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_add_programs"
-            tools:text="Programbeskrivelse"/>
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/side_margin"
+            android:layout_marginEnd="@dimen/side_margin">
 
-        <View
-            android:id="@+id/divider_top"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:background="?attr/dividerHorizontal"
-            android:layout_marginBottom="@dimen/margin_between_elements"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/program_description"/>
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/program_type_header"
+                android:layout_height="120dp"
+                android:layout_width="match_parent"
+                android:padding="@dimen/margin_between_elements"
+                android:layout_marginBottom="@dimen/side_margin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:strokeWidth="1dp"
+                app:cardBackgroundColor="@color/green_100"
+                app:cardCornerRadius="8dp"
+                app:cardElevation="4dp">
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
 
-        <androidx.core.widget.NestedScrollView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/divider_top"
-            app:layout_constraintBottom_toTopOf="@id/button_layout">
+                    <ImageView
+                        android:id="@+id/program_type_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="0dp"
+                        android:visibility="visible"
+                        android:layout_weight="1"
+                        android:layout_gravity="center"
+                        android:scaleType="fitXY"
+                        android:adjustViewBounds="true"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        tools:src="@drawable/runner_img"/>
 
-            <LinearLayout
+                    <TextView
+                        style="@style/headerText"
+                        android:id="@+id/tv_add_programs"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@{programType.description}"
+                        android:layout_gravity="center"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/program_type_image"
+                        tools:text="Program-navn"/>
+
+                </LinearLayout>
+            </com.google.android.material.card.MaterialCardView>
+
+            <TextView
+                android:id="@+id/program_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:text="@{program.description}"
+                android:layout_marginTop="@dimen/side_margin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/program_type_header"
+                tools:text="Programbeskrivelse kommer her"/>
 
-                <!-- Content below divider_top -->
+            <View
+                android:id="@+id/divider_top"
+                android:layout_width="0dp"
+                android:layout_height="1dp"
+                android:background="?attr/dividerHorizontal"
+                android:layout_marginTop="@dimen/margin_between_elements"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/program_description"/>
 
-                <TextView
-                    android:id="@+id/tv_program_exercises"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/program_exercises"
-                    app:layout_constraintStart_toStartOf="@id/divider_top"
-                    app:layout_constraintTop_toBottomOf="@id/program_description" />
+            <TextView
+                style="@style/titleText"
+                android:id="@+id/tv_program_exercises"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/side_margin"
+                android:text="@string/program_exercises"
+                app:layout_constraintStart_toStartOf="@id/divider_top"
+                app:layout_constraintTop_toBottomOf="@id/program_description" />
 
-                <!-- Denne recycler view viser kun text med navn på øvelse som er lagt til. Må oppdateres underveis når øvelser legges til-->
+            <!-- Denne recycler view viser kun text med navn på øvelse som er lagt til. Må oppdateres underveis når øvelser legges til-->
 
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/program_exercise_recycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="6dp"
-                    android:clipToPadding="false"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:itemCount="6"
-                    tools:listItem="@layout/exercise_name_item" />
-
-                <View
-                    android:id="@+id/divider_bottom"
-                    android:layout_width="0dp"
-                    android:layout_height="1dp"
-                    android:layout_margin="@dimen/side_margin"
-                    android:background="?attr/dividerHorizontal" />
-
-                <TextView
-                    android:id="@+id/no_exercise_message"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="invisible"
-                    android:text="@string/no_registered_exercises"
-                    android:layout_marginTop="@dimen/side_margin"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/divider_bottom" />
-
-                <TextView
-                    android:id="@+id/tv_choose_exercises"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/tc_choose_exercises"
-                    android:layout_marginTop="@dimen/margin_between_elements"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/divider_bottom" />
-
-                <!--Denne recycler viser liste over øvelser, med ikon, navn og legg-til knapp-->
-                <!--Før bruker har lagret øvelser er den invisible-->
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/other_exercise_recycler"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="6dp"
-                    android:clipToPadding="false"
-                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:itemCount="8"
-                    tools:listItem="@layout/exercise_item" />
-
-            </LinearLayout>
-        </androidx.core.widget.NestedScrollView>
-
-        <LinearLayout
-            android:id="@+id/button_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:padding="@dimen/side_margin">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/program_exercise_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="6dp"
+                android:clipToPadding="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_program_exercises"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:itemCount="6"
+                tools:listItem="@layout/exercise_name_item" />
 
             <Button
+                style="@style/Widget.MaterialComponents.Button"
                 android:id="@+id/button_start"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="Start Program"
+                app:icon="@drawable/play_circle_outline_24"
+                android:layout_gravity="center_vertical"
+                app:layout_constraintTop_toBottomOf="@id/program_exercise_recycler"
+                app:layout_constraintBottom_toTopOf="@id/divider_middle"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
+            <View
+                android:id="@+id/divider_middle"
+                android:layout_width="0dp"
+                android:layout_height="3dp"
+                android:background="?attr/dividerHorizontal"
+                android:layout_marginTop="@dimen/margin_between_elements"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/button_start"/>
+
+            <TextView
+                style="@style/titleText"
+                android:id="@+id/no_exercise_message"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="@string/no_registered_exercises"
+                android:layout_marginTop="@dimen/side_margin"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/divider_middle" />
+
+
+            <TextView
+                style="@style/titleText"
+                android:id="@+id/tv_choose_exercises"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/tc_choose_exercises"
+                android:layout_marginTop="@dimen/margin_between_elements"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/no_exercise_message" />
+
+            <!--Denne recycler viser liste over øvelser, med ikon, navn og legg-til knapp-->
+            <!--Før bruker har lagret øvelser er den invisible-->
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/other_exercise_recycler"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Start Program"
-                android:layout_gravity="center_vertical" />
+                android:padding="6dp"
+                android:clipToPadding="false"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_choose_exercises"
+                tools:itemCount="8"
+                tools:listItem="@layout/exercise_item" />
 
             <Button
+                style="@style/Widget.MaterialComponents.Button"
                 android:id="@+id/button_add_exercises"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/create_new_exercise"
-                android:layout_gravity="center_vertical" />
-        </LinearLayout>
+                android:layout_gravity="center_vertical"
+                app:icon="@drawable/add_img"
+                app:layout_constraintTop_toBottomOf="@id/other_exercise_recycler"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </android.widget.ScrollView>
 </layout>
