--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -17,7 +17,7 @@
         tools:context=".SessionDetailsFragment">
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/cardHeader"
+            android:id="@+id/cardSessionHeader"
             android:layout_height="120dp"
             android:layout_width="match_parent"
             android:padding="@dimen/margin_between_elements"
@@ -26,8 +26,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:strokeWidth="1dp"
-            app:strokeColor="@color/border"
-            app:cardElevation="1dp">
+            app:cardBackgroundColor="@color/green_100"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,8 +45,6 @@
                     android:scaleType="fitXY"
                     android:adjustViewBounds="true"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toTopOf="@id/sessionProgramName"
                     tools:src="@drawable/roing_img"/>
                 <!--android:src="@{viewModel.currentDisplayableSession.programTypeIcon}"-->
@@ -67,6 +66,7 @@
                     tools:src="@drawable/img_outdoor_runner"/>
 
                 <TextView
+                    style="@style/headerText"
                     android:id="@+id/sessionProgramName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -89,12 +89,12 @@
             android:layout_marginTop="@dimen/margin_between_elements"
             android:layout_marginEnd="@dimen/margin_between_elements"
             android:padding="@dimen/margin_between_elements"
-            app:cardElevation="0dp"
             app:layout_constraintEnd_toStartOf="@id/cardDistance"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cardHeader"
-            app:strokeColor="@color/border"
-            app:strokeWidth="1dp">
+            app:layout_constraintTop_toBottomOf="@id/cardSessionHeader"
+            app:cardBackgroundColor="@color/tridiac_800"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -102,13 +102,15 @@
                 android:orientation="vertical">
 
                 <TextView
+                    style="@style/yellowText"
                     android:id="@+id/timeHeader"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/margin_between_elements"
                     android:text="@string/time"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    />
 
                 <TextView
                     android:id="@+id/totalTime"
@@ -116,9 +118,11 @@
                     android:layout_height="wrap_content"
                     android:padding="@dimen/margin_between_elements"
                     android:text="@{@string/trainingTime(viewModel.formatSeconds(viewModel.currentDisplayableSession.sessionTimeSpent.toString()))}"
+                    android:layout_gravity="bottom"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:text="time" />
+                    tools:text="00:45:23"
+                    style="@style/yellowTextHeader"/>
 
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -130,12 +134,12 @@
             android:padding="@dimen/margin_between_elements"
             android:layout_marginTop="@dimen/margin_between_elements"
             android:layout_marginBottom="@dimen/margin_between_elements"
-            app:layout_constraintTop_toBottomOf="@id/cardHeader"
+            app:layout_constraintTop_toBottomOf="@id/cardSessionHeader"
             app:layout_constraintStart_toEndOf="@id/cardTime"
             app:layout_constraintEnd_toEndOf="parent"
-            app:strokeWidth="1dp"
-            app:strokeColor="@color/border"
-            app:cardElevation="0dp">
+            app:cardBackgroundColor="@color/tridiac_800"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -143,6 +147,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    style="@style/yellowText"
                     android:id="@+id/distanceHeader"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -153,6 +158,7 @@
                     />
 
                 <TextView
+                    style="@style/yellowTextHeader"
                     android:id="@+id/totalDistance"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -160,7 +166,7 @@
                     android:text="@{@string/totalDistance(viewModel.currentDisplayableSession.sessionDistance)}"
                     app:layout_constraintStart_toEndOf="@+id/cardTime"
                     app:layout_constraintTop_toBottomOf="@id/sessionProgramName"
-                    tools:text="distance" />
+                    tools:text="12.2km" />
 
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -176,9 +182,9 @@
             app:layout_constraintTop_toBottomOf="@id/cardTime"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/cardSpeed"
-            app:strokeWidth="1dp"
-            app:strokeColor="@color/border"
-            app:cardElevation="0dp">
+            app:cardBackgroundColor="@color/tridiac_800"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -186,6 +192,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    style="@style/yellowText"
                     android:id="@+id/heightHeader"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -196,6 +203,7 @@
                     />
 
                 <TextView
+                    style="@style/yellowTextHeader"
                     android:id="@+id/totalHeight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -203,7 +211,7 @@
                     android:text="@{@string/sessionHeight(viewModel.currentDisplayableSession.sessionHeight)}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="height" />
+                    tools:text="52m" />
 
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
@@ -218,46 +226,63 @@
             app:layout_constraintTop_toBottomOf="@id/cardDistance"
             app:layout_constraintStart_toEndOf="@id/cardHeight"
             app:layout_constraintEnd_toEndOf="parent"
-            app:strokeWidth="1dp"
-            app:strokeColor="@color/border"
-            app:cardElevation="0dp">
+            app:cardBackgroundColor="@color/tridiac_800"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
 
-            <LinearLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/speedHeader"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="@dimen/margin_between_elements"
-                    android:text="Fart"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    />
 
                 <TextView
+                    style="@style/yellowTextHeader"
                     android:id="@+id/avgSpeed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/margin_between_elements"
-                    android:text="@{@string/sessionSpeed(viewModel.currentDisplayableSession.sessionAvgSpeed)}"
+                    android:layout_margin="@dimen/margin_between_elements"
+                    android:text="@{@string/sessionSpeedMax(viewModel.currentDisplayableSession.sessionAvgSpeed)}"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="snittfart" />
+                    tools:text="9.6 km/h" />
 
                 <TextView
+                    style="@style/yellowText"
+                    android:id="@+id/avgSpeedText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/margin_between_elements"
+                    android:text="@string/average"
+                    app:layout_constraintStart_toEndOf="@id/avgSpeed"
+                    app:layout_constraintBottom_toBottomOf="@id/avgSpeed"/>
+
+                <TextView
+                    style="@style/yellowTextHeader"
                     android:id="@+id/maxSpeed"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="@dimen/margin_between_elements"
-                    android:text="@{@string/sessionSpeed(viewModel.currentDisplayableSession.sessionAvgSpeed)}"
+                    android:layout_margin="@dimen/margin_between_elements"
+                    android:text="@{@string/sessionSpeedAvg(viewModel.currentDisplayableSession.sessionAvgSpeed)}"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="maxfart" />
+                    app:layout_constraintTop_toBottomOf="@id/avgSpeed"
+                    app:layout_constraintBottom_toBottomOf="parent
+"
+                    tools:text="14.2 km/h" />
 
-            </LinearLayout>
+                <TextView
+                    style="@style/yellowText"
+                    android:id="@+id/maxSpeedText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/margin_between_elements"
+                    android:text="@string/max"
+                    app:layout_constraintStart_toEndOf="@id/maxSpeed"
+                    app:layout_constraintBottom_toBottomOf="@id/maxSpeed"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </com.google.android.material.card.MaterialCardView>
 
 
