--- a/app/src/main/res/layout/fragment_new_exercise.xml
+++ b/app/src/main/res/layout/fragment_new_exercise.xml
@@ -22,11 +22,13 @@
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
             android:adjustViewBounds="true"
+            android:elevation="2dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@drawable/img_outdoor_runner" />
 
         <Button
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:id="@+id/button_gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,6 +37,7 @@
             app:layout_constraintBottom_toTopOf="@id/button_camera" />
 
         <Button
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:id="@+id/button_camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -46,7 +49,7 @@
         <View
             android:id="@+id/divider_upper"
             android:layout_width="0dp"
-            android:layout_height="1dp"
+            android:layout_height="2dp"
             android:layout_marginTop="@dimen/side_margin"
             android:background="?attr/dividerHorizontal"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +57,7 @@
             app:layout_constraintTop_toBottomOf="@id/button_camera"/>
 
         <TextView
+            style="@style/headerText"
             android:id="@+id/tv_new_exercise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -111,9 +115,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/button_save_exercise"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
             android:text="Lagre Øvelse"
             android:layout_marginBottom="@dimen/margin_between_elements"
             app:layout_constraintBottom_toTopOf="@id/button_delete"
@@ -123,12 +128,14 @@
 
         <!-- Delete button is set to visible when navigating from "edit-exercise" option in-->
         <Button
+            style="@style/Widget.MaterialComponents.Button"
             android:id="@+id/button_delete"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/button_width"
+            android:layout_height="@dimen/button_height"
             android:text="Slett Øvelse"
             android:layout_marginBottom="@dimen/side_margin"
             android:visibility="gone"
+            app:icon="@drawable/delete_bin_img"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
