--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -17,18 +17,13 @@
         tools:context=".SessionDetailsFragment">
 
         <com.google.android.material.card.MaterialCardView
+            style="@style/cardHeader"
             android:id="@+id/cardSessionHeader"
-            android:layout_height="120dp"
-            android:layout_width="match_parent"
-            android:padding="@dimen/margin_between_elements"
             android:layout_marginBottom="@dimen/margin_between_elements"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeWidth="1dp"
-            app:cardBackgroundColor="@color/green_100"
-            app:cardCornerRadius="8dp"
-            app:cardElevation="4dp">
+            >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -44,10 +39,7 @@
                     android:layout_gravity="center"
                     android:scaleType="fitXY"
                     android:adjustViewBounds="true"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toTopOf="@id/sessionProgramName"
                     tools:src="@drawable/roing_img"/>
-                <!--android:src="@{viewModel.currentDisplayableSession.programTypeIcon}"-->
 
                 <!--Sission photo is never set-->
                 <ImageView
@@ -71,9 +63,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:padding="@dimen/margin_between_elements"
                     android:text="@{@string/sessionProgramName(viewModel.currentDisplayableSession.userProgramName)}"
-                    android:textSize="@dimen/header_text"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="parent"
                     tools:text="program name" />
