--- a/app/src/main/res/layout/fragment_session_details.xml
+++ b/app/src/main/res/layout/fragment_session_details.xml
@@ -17,12 +17,18 @@
         tools:context=".SessionDetailsFragment">
 
         <com.google.android.material.card.MaterialCardView
-            style="@style/cardHeader"
             android:id="@+id/cardSessionHeader"
             android:layout_marginBottom="@dimen/margin_between_elements"
+            android:layout_height="120dp"
+            android:layout_width="match_parent"
+            android:padding="4dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            app:cardElevation="4dp"
+            app:strokeWidth="1dp"
+            app:strokeColor="@color/tridiac_800"
+
             >
 
             <LinearLayout
