--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,11 @@
         <item name="android:textSize">16sp</item>
     </style>
 
+    <style name="tableTitle" parent="Theme.ExerciseTracker">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
     <style name="cardHeader" parent="Theme.ExerciseTracker">
         <item name="cardBackgroundColor">@color/green_100</item>
         <item name="cardCornerRadius">8dp</item>
